--- a/app/globals.css
+++ b/app/globals.css
@@ -54,5 +54,21 @@ html {
   }
 }
 
+.react-colorful {
+  width: 100% !important;
+  gap: 0rem !important;
+}
+.react-colorful__last-control {
+  border-radius: 0px 0px 0px 0px !important;
+  height: 14px !important;
+  width: 100% !important;
+}
+.react-colorful__hue-pointer {
+  width: 1rem !important;
+  height: 1rem !important;
+}
+.react-colorful__pointer {
+  cursor: pointer !important;
+}
 @tailwind components;
 @tailwind utilities;
