--- a/app/globals.css
+++ b/app/globals.css
@@ -11,7 +11,7 @@
 
 html {
   font-family: "Inter", sans-serif;
-  background-color: #000000;
+  background-color: #1c1d21;
 }
 
 /* animated image */
